Bump and make the build work